Reformatted project structure to reduce code duplication

--- a/reliable_udp-main/client/CMakeLists.txt
+++ b/reliable_udp-main/client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 
-project(udp_client
+project(client
         VERSION 0.0.1
         DESCRIPTION ""
         LANGUAGES C)
@@ -12,7 +12,7 @@ set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set(SOURCE_LIST ${SOURCE_DIR}/main.c ${SOURCE_DIR}/udp_sender.c ${SOURCE_DIR}/error.c ${SOURCE_DIR}/conversion.c
         ${SOURCE_DIR}/option_handler.c ${SOURCE_DIR}/rudp_types.c ${SOURCE_DIR}/rc522.c)
 set(HEADER_LIST ${INCLUDE_DIR}/udp_sender.h ${INCLUDE_DIR}/error.h ${INCLUDE_DIR}/conversion.h
-        ${INCLUDE_DIR}/option_handler.h ${INCLUDE_DIR}/option_handler.h ${INCLUDE_DIR}/rc522.h)
+        ${INCLUDE_DIR}/option_handler.h ${INCLUDE_DIR}/option_handler.h ${INCLUDE_DIR}/rc522.h src/rfid.c include/rfid.h)
 
 set(SANITIZE TRUE)
 
